--- v1.7 (2018-xx-xx) ---
*** build-server-daemon ***
* Changed algorithm of building of projects: now project is installed just
  after build for current target system without waiting of end of build for
  other target systems.
*** build-supervisor ***
* Suppress extra messages during checking of empty git repository.

--- v1.6 (2017-12-15) ---
*** common ***
* Revert Android NDK version from r16b to r15b.
  (GCC from Android NDK >= r16 has few very inconvenient issues.)
*** build-project ***
* Simplify build rules for autotools based projects after reverting to
  Android NDK r15b.

--- v1.5 (2017-12-08) ---
*** common ***
* Update Qt SDK version from 5.9.1 to 5.10.0.
* Update Android NDK version from r15b to r16b.
*** build-project ***
* Fix build of autotools based projects with Android NDK r16 and later.
* Rename PrepareBuild() to PrepareBuildEnvironment() and move part of it into
  new function PrepareBuildDirectory().

--- v1.4 (2017-07-25) ---
*** common ***
* Update Qt SDK version from 5.8.0 to 5.9.1.
* Update Android NDK version from r13b to r15b.
* Delete 'qt-sdk' target and add 'qt-sdk-online' and 'qt-sdk-offline' into
  Makefile instead of it. Only 'qt-sdk-online' is used when default target
  ('download') is called.
*** build-project ***
* Fix calculation of SYSTEMS variable when more than 9 systems are set througt
  command-line options.
* Fix InstallUsualProject(): do not force installation of (incompletely) built
  project (`make -i ...`).
* Change InstallQmakeProject(): remove all build static libraries when there
  are more than one *.a file.
*** build-server-daemon ***
* Use DELAY_BETWEEN_BUILDS variable from config files.

--- v1.3 (2017-05-30) ---
*** common ***
* Update Qt SDK version from 5.7.1 to 5.8.0.
* Update Android NDK version from r13b to r14b.
* Update Android SDK version from r24.4.1 to r25.2.5.
  Newer versions (>= 25.3.0) could not be used because due to missing of Gradle
  scripts they break packaging of APK files.