@@ -1,6 +1,5 @@
 ===== Build dependencies =====
 * wget      (optional)
-* unzip     (optional)
 * git       (optional)
 
 
