@@ -13,7 +13,7 @@ export BUILD_SERVER_LOG_FILE="${BUILD_SERVER_BIN_DIR}/build-server-daemon.log"
 export LXE_DIR="/opt/lxe"
 export MXE_DIR="/opt/mxe"
 
-export QT_SDK_DIR="/opt/Qt/qt-current/5.10.0"
+export QT_SDK_DIR="/opt/Qt/qt-current/5.10.1"
 
 export ANDROID_SDK_ROOT="/opt/android_sdk/android-sdk-linux"
 export ANDROID_NDK_ROOT="/opt/android_ndk/android-ndk-r15b"
